Some SQ issue fixes